Address code review: thread safety, security, input validation, test quality (Tasks 3-5)
Task 3 - Thread Safety & Server Robustness:
- Volatile running flag and thread pool (20 threads) in MyServer
- Socket timeout (30s) and graceful shutdown with awaitTermination
- 500 error response on unhandled exceptions
- Request body size limit (10MB) in HttpRequestParser
- NumberFormatException handling for Content-Length

Task 4 - Security (XSS, Path Traversal):
- Apply escapeHtml() to all user input rendered in HTML (Form, Listing, Folder)
- Path traversal protection in Listing via isPathSafe() check
- Fix file detection heuristic: replace contains(".") with isFile()
- Bounds checks and error handling in multipart parsing
- Fix resource leaks in FilesTest and FormsTest

Task 5 - Session Hardening & Input Validation:
- Server-side tries tracking with SessionData record in GameSession
- Remove client-side tries-left cookie from Guess
- Session TTL (30 min) with lazy cleanup
- Cap ping delay to 0-30 seconds
- Validate port number in Main (range, format, bounds)
- Fix CommandLineTest isolation (@AfterEach)

23 new tests added (88 total, all passing).